--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<form action="add" method="post">
+	<form action="add.jsp" method="post">
 		<label for="first_num">Enter First Number:</label><br>
 		<input type="text" name="first_num" id="first_num"><br><br>
 		
